[project]
name = "img2txt-comfyui-nodes"
description = "Get general description or specify questions to ask about images (medium, art style, background, etc.). Supports Chinese 🇨🇳 questions via MiniCPM model."
version = "1.2.1"
license = "LICENSE"
dependencies = ["transformers<=4.41.2", "bitsandbytes>=0.43.0", "timm>=1.0.7", "sentencepiece", "accelerate>=0.3.0"]

[project.urls]
Repository = "https://github.com/christian-byrne/img2txt-comfyui-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "christian-byrne"
DisplayName = "img2txt-comfyui-nodes"
Icon = "https://img.icons8.com/?size=100&id=49374&format=png&color=000000"
